turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:2: error: '=>' expected but ')' found.
  case Color.white) =>	mark(Color.black);	right(); forward()
                  ^